--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                 </div>
             </div>
 
-            <h1>Parinda</h1>
+            <h1>Prem Singh</h1>
             <div class="artist">
                 <div>
                     <h3 class="line-through-bottom">INTERA<span>C</span>TIVE</h3>
@@ -281,7 +281,7 @@
 
                 <div class="social">
                     <div>
-                        <h1>Parinda&#169;</h1>
+                        <h1>Prem Singh&#169;</h1>
                         <img src="https://uploads-ssl.webflow.com/5f2429f172d117fcee10e819/60474834660f934090d42877_stamp.png" alt="">
                         <h2>legal</h2>
                     </div>
