--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                 </div>
             </div>
 
-            <h1>Prem Singh</h1>
+            <h1>Prem S.</h1>
             <div class="artist">
                 <div>
                     <h3 class="line-through-bottom">INTERA<span>C</span>TIVE</h3>
